added confirm emergency and discard emergency endpoints
