# src/controllers/paramedics/paramedicController.ts
@@ -1,5 +1,10 @@
 import { NextFunction, Request, Response } from "express";
-import { addParamedicIntoCollection, getAllActiveEmergenciesFromCollection } from "../../services/paramedics/paramedicService";
+import { 
+    addParamedicIntoCollection, 
+    getAllActiveEmergenciesFromCollection, 
+    updateEmergencyPickUpFromCollection,
+    cancelEmergencyCollection
+} from "../../services/paramedics/paramedicService";
 
 export const registerParamedic = async (req: Request, res: Response, next: NextFunction) => {
     const { ambulanceId, firstName, lastName, email, password } = req.body;
@@ -22,14 +27,14 @@ export const registerParamedic = async (req: Request, res: Response, next: NextF
     }
 }
 
-export const getActiveEmergencies = async(req: Request, res: Response, next: NextFunction) => {
-    try{
+export const getActiveEmergencies = async (req: Request, res: Response, next: NextFunction) => {
+    try {
         const userId = (req as any).userId.userId;
 
         const result = await getAllActiveEmergenciesFromCollection(userId);
 
-        if(result.success){
-            if(!result.data){
+        if (result.success) {
+            if (!result.data) {
                 res.status(404).json({
                     message: "No se encontraron emergencias activas",
                 });
@@ -39,12 +44,78 @@ export const getActiveEmergencies = async(req: Request, res: Response, next: Nex
                 message: result.message,
                 data: result.data,
             });
-        }else{
+        } else {
             res.status(400).json({
                 message: result.message,
             });
         }
-    }catch(error){
+    } catch (error) {
+        next(error);
+    }
+}
+
+export const confirmEmergency = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+
+        const { emergencyId, pickupDate } = req.body
+
+        if (!emergencyId || !pickupDate) {
+            res.status(400).json({
+                message: "Por favor, ingresar un emergencyid y un pickdate valido",
+            });
+        }
+
+        const result = await updateEmergencyPickUpFromCollection(emergencyId, pickupDate);
+
+        if (result.success) {
+            if (!result) {
+                res.status(404).json({
+                    message: "No se encontraron emergencias con ese Id",
+                });
+                return;
+            }
+            res.status(200).json({
+                message: result.message,
+            });
+        } else {
+            res.status(400).json({
+                message: result.message,
+            });
+        }
+    } catch (error) {
+        next(error);
+    }
+}
+
+export const cancelEmergency = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+
+        const { emergencyId, pickupDate } = req.body
+
+        if (!emergencyId || !pickupDate) {
+            res.status(400).json({
+                message: "Por favor, ingresar un emergencyid y un pickdate valido",
+            });
+        }
+
+        const result = await cancelEmergencyCollection(emergencyId, pickupDate);
+
+        if (result.success) {
+            if (!result) {
+                res.status(404).json({
+                    message: "No se encontraron emergencias con ese Id",
+                });
+                return;
+            }
+            res.status(200).json({
+                message: result.message,
+            });
+        } else {
+            res.status(400).json({
+                message: result.message,
+            });
+        }
+    } catch (error) {
         next(error);
     }
 }
